--- a/spring-boot-thymeleaf/src/main/resources/templates/demo2.html
+++ b/spring-boot-thymeleaf/src/main/resources/templates/demo2.html
@@ -17,10 +17,22 @@
 
     <tr th:each="user : ${listOfUsers}">>
 
-        <td th:text = "${user.id}"></td>
-        <td th:text = "${user.name}"></td>
-        <td th:text = "${user.age}"></td>
+        <td th:text="${user.id}"></td>
+        <td th:text="${user.name}"></td>
+        <td th:text="${user.age}"></td>
     </tr>
+
+    <h3>Thymeleaf scopes</h3>
+
+    Request: <span th:text="${#httpServletRequest.getAttribute('request')}"></span><br/>
+    Session: <span th:text="${session.session}"></span><br/>
+    Application: <span th:text="${application.application }"></span><br/>
+
+    <h3>Thymeleaf URLs</h3>
+    <!-- redirect to demo page without parameter -->
+    <a th:href="@{~/demo}">Visit Demo Page</a> <br/>
+    <!-- redirect to demo page with parameter -->
+    <a th:href="@{~/demo(id=1, name=eric)}">Visit Demo page With Parameter</a>
 
 </table>
 </body>
