--- a/spring-boot-thymeleaf/src/main/resources/templates/demo.html
+++ b/spring-boot-thymeleaf/src/main/resources/templates/demo.html
@@ -9,7 +9,7 @@
 <h3>Exam Results</h3>
 
 <div th:if="${grade} >= 60">
-    You passed the exam.
+    You  passed the exam.
     <div th:switch="${GPA}">You are
         <span th:case="A">Excellent</span>
         <span th:case="B">good</span>
@@ -21,7 +21,7 @@
 </div>
 
     <div th:if="${grade}< 60">
-        You failed the Exam.
+        You successfully failed the Exam.
     </div>
 
 </body>
